add bunch of things - add halaman masuk - add halaman verifikasi otp - add library eksternal untuk otp - fixing some bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
+<!--    splash screen-->
     <string name="app_name">Nebeng</string>
+
+<!--    halaman pengguna atau driver-->
+    <string name="daftar_menjadi_pengguna">Daftar Menjadi Pengguna</string>
+    <string name="daftar_menjadi_driver">Daftar Menjadi Driver</string>
+    <string name="atau_menjadi">Atau Menjadi</string>
+
+<!--    halaman daftar-->
+    <string name="title_daftar">DAFTAR</string>
 </resources>
